--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
   "version": 2,
   "public": true,
   "builds": [
-    { "src": "public/**/*", "use": "@vercel/static" }
+    { "src": "public/**/*", "use": "@vercel/static" },
+    { "src": "styles/**/*", "use": "@vercel/static" },
+    { "src": "scripts/**/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "handle": "filesystem" },
